ecmascript/parser/tests/test262-error-references/fail/a7be138dfd29025e.js.stderr
error: TS1109
 --> $DIR/tests/test262-parser/fail/a7be138dfd29025e.js:2:7
  |
2 |     { *[yield iter]() {} }
  |       ^

